k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diploma
  labels:
    project: diploma
    managed-by: kubectl
