k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  namespace: diploma
  labels:
    app: diploma-app
    project: diploma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      labels:
        app: diploma-app
        project: diploma
    spec:
      containers:
        - name: diploma-app
          image: cr.yandex/crp35inad6caauskik6q/diploma-app:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
