k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diploma-app
  namespace: diploma
  labels:
    app: diploma-app
    project: diploma
spec:
  type: ClusterIP
  selector:
    app: diploma-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
