k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-app
  namespace: diploma
  labels:
    app: diploma-app
    project: diploma
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: diploma-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diploma-app
                port:
                  number: 80
